09-15-13
 - -oldsave parameter to load older save games (i.e. not the 1MB and 256 string
    size games).
 - -overridesave parameter to attempt forcing incorrect save game versions.
    Will likely crash, no guarantees.
 - Fixed readthisfullscreenhack boolean to work with KEY_ESCAPE. (whoops!)
 - Preliminary support for Chex Quest.  Some text needs to be changed.
   The coop intermission screen is kind of funky because the text is different 
   sizes compared to the original Doom.  I may just remove the coop intermission 
   screen entirely.
 - devparm was not being read properly from -shdev, -regdev, -comdev.
   It's fairly useless as F12 already allows screen shots now.
 - Music wasn't pausing from S_SetMusicVolume if it was set to 0.
   Still buggy with intermission and intro.  Basically, S_ChangeMusic.
 - Fixed the math for endmsg.  Was skipping over the "are you sure you want to
   quit this great game?" message.  Code from Chocolate Doom.
 - Now shows the "Picked up a healthkit that you really need!" message.
 - use_wpnbinds in DEFAULT.CFG.  If set to 1, the following defaults are used:
   * 'Q' for Rocket Launcher
   * 'Z' for Shotgun
   * 'X' for Chaingun
   * 'C' for Plasma
   These binds can be customized via the DEFAULT.CFG.  However, you must know
   the appropriate scancode.

09-14-13
 - Added Fullscreen Ammo, Armor, Health, and Keycards.
 - Imported the Cyberman/Tactile stuff from Heretic.
 - Added the original mprintf from DOS Doom.
 - Original gamemode determination banners, WATCOM specific stuff.
 - linear.asm from Heretic.  Might have some faster drawing on
   some 486-era stuff?
 - Joystick support working.
 - Fixed bug with joystick super speed.
 - Fixed byte *savep warning.
 - DOOM.WAD will search for Episode 4 and auto-load Ultimate Doom.
   Can be overridden with -doom parameter.
 - Fixed endstring/quit messages to work for proper gamemodes.
 - Palette Flashing toggle is now read from config.
 - Fixed Final Doom map names in Automap.